# libzipxx

./: .gitmodules  BUILD.gn  libzipxx.gyp  wscript
config/src/mac/: config.h
config/src/win/: config.h
include/zipxx/: Zip.hpp  zipxx.hpp
libzip-1.1.3/lib/: compat.h  zip_name_locate.c
src/zipxx/: Zip.cpp
